completed scrollbar issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,9 +10,12 @@ button.invalid {
 
 /* modal */
 .modal {
+  top: 0;
+  left: 0;
+  position: fixed;
   width: 100%;
   height: 100%;
-  position: relative;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
   display: flex;
@@ -21,13 +24,39 @@ button.invalid {
 }
 
 .modal_contents_container {
-  position: absolute;
   background-color: #fff;
-  width: 580px;
   border-radius: 24px;
   display: flex;
   flex-direction: column;
+  max-height: 95vh;
+  overscroll-behavior-y: contain;
+}
+
+.scrollable_content {
+  scrollbar-gutter: stable;
+  padding-block: 24px;
+  display: flex;
+  flex-direction: column;
   row-gap: 24px;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
+/* scrollbar */
+
+.scrollable_content::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scrollable_content::-webkit-scrollbar-thumb {
+  cursor: pointer;
+  transition: 0.4s;
+  background-color: var(--txt-color-ultra-light);
+  border-radius: 4px;
+  border-right: 1px solid #fff;
+}
+.scrollable_content::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 /* modal header */
